--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/estilo.css">
 </head>
 <body>
-    <header>
-        
-    </header>
     <main>
-    </main>
-    <footer>
+        <header class="header">
+            <img src="assets/img/logo.png" alt="" class="header__logotipo">
+            <img src="assets/img/mulher.png" alt="" class="header__mulher">
+            <div class="header__text">
+                <p class="header__text--info">NRF2020, <br> Kobe Bryant e <br> WhatsApp Payment</p>
+                <p class="header__text--edition">edição 06</p>
+            </div>
+        </header>
+        <footer>
 
-    </footer>
+        </footer>
+    </main>
 </body>
-</html>
+</html>  
